[FIXED] dublicate product in cart and gift wrap total add

--- a/web/styles/components/Customer/ProductInfoDisplay.module.scss
+++ b/web/styles/components/Customer/ProductInfoDisplay.module.scss
@@ -1,7 +1,7 @@
 .productDisplay {
   //margin-top: 70px;
   width: 100%;
-  height: 440px;
+  min-height: 440px;
 
   background-color: var(--box-bg);
   display: flex;
@@ -17,7 +17,7 @@
 
     &_img {
       width: 100%;
-      height: 80%;
+      height: 300px;
       position: relative;
     }
 
@@ -42,6 +42,24 @@
 
     &_name {
       font-size: 1.3rem;
+    }
+
+    .size {
+      border: 1px solid var(--default-red);
+      padding: 5px 10px;
+      // font-weight: bold;
+      font-size: 1.3rem;
+      cursor: pointer;
+
+      &:hover {
+        background-color: var(--default-red);
+        color: white;
+      }
+    }
+
+    .selectedSize {
+      background-color: var(--default-red);
+      color: white;
     }
 
     &_rating {
